Update guía permutación y correlación

--- a/Clase_05/Clase_05_Guia_permutacion_correlación.html
+++ b/Clase_05/Clase_05_Guia_permutacion_correlación.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2022-04-10" />
 
-<title>Clase 05 - Guia de correlación no paramétrica</title>
+<title>Clase 05 - Guia de permutaciónes y correlación no paramétrica</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -442,7 +442,7 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Clase 05 - Guia de correlación no paramétrica</h1>
+<h1 class="title toc-ignore">Clase 05 - Guia de permutaciónes y correlación no paramétrica</h1>
 <h3 class="subtitle">Técnicas de análisis no paramétricos</h3>
 <h4 class="author">Dr. José A. Gallardo.</h4>
 <address class="author_afil">
